Update the blobify job to also sync package specs in the same commit
It's important to get them in the same commit so that the 'spec' file accurately represents which
source code was used to build the binary blob.

[#137566339]

Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/scripts.yml
+++ b/scripts.yml
@@ -198,6 +198,18 @@ upload_blobs: |
   popd
 
   cp -r "${RELEASE}/." "${OUTPUT}/"
+update_package_specs: |
+  #!/bin/bash
+
+  set -ex
+
+  pushd "${RELEASE}"
+    export GOPATH="${PWD}"
+    export PATH="${GOPATH}/bin:${PATH}"
+    ./scripts/sync-package-specs
+  popd
+
+  cp -r "${RELEASE}/." "${OUTPUT}/"
 update_submodule: |
   #!/bin/bash
 
