--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -238,7 +238,7 @@ jobs:
             }
           }
 
-- name: upload-blobs
+- name: update-release
   plan:
   - get: loggregator
     resource: loggregator-develop
@@ -246,56 +246,71 @@ jobs:
     - run-tests
     - run-windows-tests
     trigger: true
-  - task: uploading blobs
-    params:
-      S3_ACCESS_KEY: {{s3-access-key}}
-      S3_SECRET_KEY: {{s3-secret-key}}
+  - task: upload-blobs
     config:
       platform: linux
       image_resource:
         type: docker-image
         source:
         - repository: loggregator/bosh20
+      params:
+        S3_BUCKET: loggregator-release-blobs
+        S3_ACCESS_KEY: {{s3-access-key}}
+        S3_SECRET_KEY: {{s3-secret-key}}
+        RELEASE: loggregator
+        OUTPUT: blobified-loggregator
       inputs:
       - name: loggregator
       outputs:
-      - name: loggregator-with-updated-blobs
+      - name: blobified-loggregator
       run:
         path: bash
         args:
           - -c
-          - |
-            #!/bin/bash
-            set -ex
-
-            WORKSPACE=${PWD}
-            export GOPATH=${WORKSPACE}/loggregator/
-
-            pushd "${GOPATH}"
-              cat << EOF > config/private.yml
-            ---
-            blobstore:
-              provider: s3
-              options:
-                bucket_name: loggregator-release-blobs
-                access_key_id: $S3_ACCESS_KEY
-                secret_access_key: $S3_SECRET_KEY
-                credentials_source: static
-            EOF
-
-              bosh -n sync-blobs
-
-              ./scripts/blobify
-              bosh -n upload-blobs
-              git config user.email "cf-loggregator@pivotal.io"
-              git config user.name "Loggregator CI"
-              (git add config/blobs.yml && git commit -m "update the blobs [ci skip]") || echo "No changes to commit"
-            popd
-
-            rsync -aci $GOPATH $WORKSPACE/loggregator-with-updated-blobs
+          - {{upload_blobs}}
+  - task: sync-package-specs
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+        - repository: loggregator/bosh20
+      params:
+        RELEASE: blobified-loggregator
+        OUTPUT: updated-loggregator
+      inputs:
+      - name: blobified-loggregator
+      outputs:
+      - name: updated-loggregator
+      run:
+        path: bash
+        args:
+          - -c
+          - {{update_package_specs}}
+  - task: commit
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: loggregator/go17
+      inputs:
+      - name: updated-loggregator
+      outputs:
+      - name: committed-loggregator
+      params:
+        SOURCE: updated-loggregator
+        PATHS: config/blobs.yml packages/
+        COMMIT_MESSAGE: "Update blobs and package specs [ci skip]"
+        OUTPUT: committed-loggregator
+      run:
+        path: bash
+        args:
+        - -c
+        - {{commit}}
   - put: loggregator-develop-with-blobs
     params:
-      repository: loggregator-with-updated-blobs
+      repository: committed-loggregator
 
 - name: upload-stemcell
   plan:
@@ -347,7 +362,7 @@ jobs:
       resource: loggregator-develop-with-blobs
       trigger: true
       passed:
-      - upload-blobs
+      - update-release
     - get: cf-deployment
       trigger: true
     - get: deployments-loggregator
@@ -450,7 +465,7 @@ jobs:
     - get: loggregator
       resource: loggregator-develop-with-blobs
       passed:
-      - upload-blobs
+      - update-release
       trigger: true
     - get: deployments-loggregator
       trigger: true
@@ -1208,7 +1223,7 @@ groups:
   - loggregator-deploy
   - lats
   - promotion
-  - upload-blobs
+  - update-release
 
 - name: submodules
   jobs:
