--- a/scripts.yml
+++ b/scripts.yml
@@ -229,12 +229,16 @@ commit: |
   #!/bin/bash
   set -ex
 
-  pushd "${SOURCE}"
-    git config user.email "cf-loggregator@pivotal.io"
-    git config user.name "Loggregator CI"
-    git add ${PATHS}
-    git commit -m "$COMMIT_MESSAGE"
-  popd
+  if [ ! "$(git status --porcelain)" = "" ]; then
+    pushd "${SOURCE}"
+      git config user.email "cf-loggregator@pivotal.io"
+      git config user.name "Loggregator CI"
+      git add ${PATHS}
+      git commit -m "$COMMIT_MESSAGE"
+    popd
+  else
+    echo "No changes to commit"
+  fi
 
   cp -r "${SOURCE}/." "${OUTPUT}/"
 
