Adds spiff to bosh10 for cf-release manifest generation
[#136568119]

Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/docker-images/bosh10/Dockerfile
+++ b/docker-images/bosh10/Dockerfile
@@ -3,3 +3,7 @@ FROM loggregator/go17
 RUN apt-get --yes update && \
     apt-get --yes install ruby && \
     gem install bosh_cli --no-ri --no-rdoc
+
+RUN wget https://github.com/cloudfoundry-incubator/spiff/releases/download/v1.0.8/spiff_linux_amd64.zip && \
+    unzip spiff*.zip && \
+    mv spiff /usr/local/bin/
