--- a/docker-images/bosh10/Dockerfile
+++ b/docker-images/bosh10/Dockerfile
@@ -1,8 +1,18 @@
-FROM loggregator/go17
+FROM ubuntu:latest
 
 RUN apt-get --yes update && \
-    apt-get --yes install ruby && \
-    gem install bosh_cli --no-ri --no-rdoc
+    apt-get --yes install software-properties-common && \
+    apt-add-repository ppa:brightbox/ruby-ng && \
+    apt-get --yes update && \
+    apt-get --yes install \
+        build-essential \
+        git \
+        ruby2.3 \
+        ruby2.3-dev \
+        unzip \
+        wget &&\
+    gem update --system && \
+    gem install bosh_cli bundler --no-ri --no-rdoc
 
 RUN wget https://github.com/cloudfoundry-incubator/spiff/releases/download/v1.0.8/spiff_linux_amd64.zip && \
     unzip spiff*.zip && \
