Rebases on top of other commits to avoid failure
[#136568119]

Signed-off-by: Warren Fernandes <wfernandes@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -1402,6 +1402,7 @@ jobs:
   - put: deployments-loggregator-with-changes
     params:
       repository: committed-deployments-loggregator
+      rebase: true
 
 - name: delete-bosh-lite
   serial_groups:
@@ -1481,6 +1482,7 @@ jobs:
   - put: deployments-loggregator-with-changes
     params:
       repository: committed-deployments-loggregator
+      rebase: true
 groups:
 - name: loggregator
   jobs:
