--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -400,8 +400,8 @@ jobs:
           # TODO: remove skip-drain in a few weeks once issues are resolved
           # with consul_agent_windows
           bosh -n -e coconut -d cf deploy cf-deployment.yml \
-            -o opsfiles/tcp-routing-gcp.yml \
-            -o opsfiles/windows-cell.yml \
+            -o operations/tcp-routing-gcp.yml \
+            -o operations/windows-cell.yml \
             -o $DEPLOYMENT/cf-ops.yml \
             --vars-store $DEPLOYMENT/cf-vars.yml \
             --skip-drain=windows-cell
